restructuring project strategy

--- a/force-app/main/default/lwc/actionPlanTemplateItemContainer/actionPlanTemplateItemContainer.html
+++ b/force-app/main/default/lwc/actionPlanTemplateItemContainer/actionPlanTemplateItemContainer.html
@@ -1,3 +1,10 @@
 <template>
-    
+    <div class="slds-grid slds-grid_vertical">
+        <div class="slds-col">
+            <c-action-plan-template-item-actions></c-action-plan-template-item-actions>
+        </div>
+        <div class="slds-col">
+            <c-action-plan-template-item-list></c-action-plan-template-item-list>
+        </div>
+    </div>
 </template>
