--- a/force-app/main/default/lwc/actionPlanTemplateItemActions/actionPlanTemplateItemActions.html
+++ b/force-app/main/default/lwc/actionPlanTemplateItemActions/actionPlanTemplateItemActions.html
@@ -1,3 +1,18 @@
 <template>
-    
+    <div slot="title">
+        <div class="slds-grid slds-wrap">
+            <div class="slds-col slds-size_10-of-12">
+                <lightning-icon icon-name="standard:task"></lightning-icon>
+                <span style="font-weight: bold; font-size: large;">&nbsp;&nbsp;Tasks</span>
+            </div>
+            <div class="slds-col slds-size_1-of-12">
+                <span><lightning-button variant="brand-outline" label="Reorder" title="Reorder items"
+                        icon-name="utility:drag" class="slds-m-left_x-small"></lightning-button></span>
+            </div>
+            <div class="slds-col slds-size_1-of-12">
+                <span><lightning-button variant="brand" label="New Task" title="Create new item"
+                        icon-name="standard:task" class="slds-m-left_x-small"></lightning-button></span>
+            </div>
+        </div>
+    </div>
 </template>
